--- a/public/css/register.css
+++ b/public/css/register.css
@@ -13,32 +13,94 @@ body{
     background-size:cover;    
     background-attachment: scroll;
 }
+
+h3{
+    text-align:left;
+    font-size: 17px;
+    margin-bottom: 5px;
+}
+
 .logo{
-    width:30%;
+    width:70%;
 }
 
 header{
-    background-color:#0077b6;
-    /*background-color: #26314d;
+    background-color: black;
+    /*background-color:#0077b6;
+    background-color: #26314d;
     background-color:#005f73;
     background-color: #6182A4;
-    background-color: #39A988; */
+    background-color: #39A988;*/
     padding:12px;
-    
 }
 
-header ul.navbar{
+.header-nav ul{
+    margin:10px 0px;
     list-style-type: none;
-    display:none;
 }
 
-header ul.navbar a{
+.header-nav a{
     text-decoration: none;
     color:white;
 }
 
-header ul.navbar a{
-    text-decoration: none;
+
+header .button-search{
+   background-color:black;   
+}
+
+header div.lines{
+    margin-bottom:5px;
+}
+
+header section div.lines{
+    display:none;
+}
+
+header article div.lines{
+    width:70%;
+}
+
+header article div.line-first
+    {
+        border-top:solid yellow 2px;  
+        box-shadow: 0px 0px 8px ;
+        width:40%;
+        margin-bottom:6px;
+    }
+
+    header article div.line-second
+    {
+        border-top:solid #4895ef 2px;
+        box-shadow: 0px 0px 8px ;    
+        width:60%;
+        margin-bottom:6px;
+    }
+
+    header article div.line-third
+    {
+        border-top:solid #b3ff51 2px;
+        box-shadow: 0px 0px 8px ;
+        width:100%;
+        margin-bottom:0px;
+    }
+
+.container-barMenu{
+    width: max-content;
+    margin: auto;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #26314D;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+  
+.container-barMenu i{
+      color: white;
+}
+
+header div.profile{
+    display:none;
 }
 
 main{
@@ -47,7 +109,7 @@ main{
 }
 
 main h1{
-    font-size: 2rem;
+    font-size: 1.8rem;
     margin-bottom:20px;
     margin-top:15px;
     color:white;
@@ -59,49 +121,72 @@ main article.tabs{
     justify-content: center;
     margin-bottom: 0px;
 }
-main article.tabs div.register{
-    background-color:#89c2d9;
-    /* background-color:#a2d2ff;
+ main article.tabs div.register{
+    background-color: #0093E9; 
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    /*background-color:#89c2d9;
+    background-color:#a2d2ff;
     background-color:#6182A4;
-    background-color:#4895ef;
+    background-color:#4895ef; 
     opacity:0.8;*/
-    text-align: center;
-    color:white;
     width:45%;
     height: 35px;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    
+} 
+
+main article.tabs div.register a.register-tab{
+    text-decoration: none;
+    margin:auto;
+    text-align: center;
     line-height: 34px;
     text-transform: uppercase;
-    font-size:0.6rem;
+    font-size:0.9rem;
+    color: white;
 }
+
 main article.tabs div.login{
-    background-color:#89c2d9;
-    /* background-color:#a2d2ff;
-    /* background-color:#6182A4; 
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    /*background-color:#89c2d9;
+    background-color:#a2d2ff;
+    background-color:#6182A4; 
     background-color:#4895ef; */
-    text-align: center;
     opacity: 0.5;
-    color:white;
     width:45%;
     height: 35px;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+
+main article.tabs div.login a.login-tab{
+    text-decoration: none;
     line-height: 34px;
     text-transform: uppercase;
-    font-size:0.6rem;
+    font-size:0.9rem;
+    color:white;
 }
 
 main section{
     padding:8px;
-    background-color:#89c2d9;
-    /* background-color:#a2d2ff;
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    /*background-color:#89c2d9;
+    background-color:#a2d2ff;
     background-color:#6182A4;
     background-color:#4895ef;
     opacity:0.8;*/
     margin:5px;
     margin-top: -1px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+    padding:4vh 15vw;
+    border-radius: 6px;
+    border-top:none;
 }
 
 main section div{
-    margin-bottom:15px;
+    margin-bottom:10px;
 }
 
 main section article.fullname{
@@ -118,38 +203,67 @@ main section article.fullname div{
 
 .input{
  width: 100%;
- height:5vh
+ height:5vh;
+ border-radius: 20px;
+ border: none;
+ background-color: white;
+ padding:0px 10px;
 }
 
+.check{
+    width: 100%;
+    font-size: 0.6rem;
+}
+
+main section label.advices{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.register-button{
+    color:white;
+    border-radius: 5px;
+    width: 45%;
+    height: 5vh;
+    margin-right: 70%;
+    background-color: #26314d;
+    border:none;
+    font-size: 10px;
+    /*background-color:#0077b6;
+    background-color:#005f73;
+    background-color: #6182A4;
+    background-color: #39A988;*/
+}
 footer{
     background-color:black;
     padding:10px;
-    margin:12px;
+  
     margin-top:0px;
 }
 
 footer nav{
     display:flex;
     flex-wrap:wrap;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
+}
+
+footer div.social-networks{
+    display: block;
+    text-align: center;
 }
 
 footer nav ul{
-    width:35%;
+    width:50%;
 }
 
 footer nav .logo{
-    width:22%;
+    margin:auto;
+    width:80%;
+    order: -1;
+    margin-bottom: 10px;
 }
-
-footer ul.navbar{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    list-style-type:none ;
-} 
 
 footer nav ul li{
     color:white;
@@ -160,24 +274,53 @@ footer ul.navbar a{
     color:white;
 }
 
+footer ul.navbar{
+    align-items: center;
+    list-style-type:none ;
+    text-align: center;
+} 
+
+.fa-instagram{color: white;
+    margin:10px;}
+.fa-facebook{color: white;
+    margin:10px;}
+.fa-whatsapp{color: white;
+    margin:10px;}
+
 @media(min-width: 769px){
+    .logo{
+        width:30%;
+    }
 
     header article{
         display:flex;
         flex-wrap:wrap;
         justify-content: space-between;
         align-items: center;
+        margin-bottom:5px;
     }
     
-    header ul.navbar{
-        display:flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
+    .header-nav{
         width:28%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
         /* align-items: flex-start; */
         /* margin-bottom:8px;
         margin-left:38%; */
     }
+
+    .header-nav ul{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .header-nav ul a{
+        padding: 5px;
+    }
+
     /* header ul.navbar li{
         width:30%;
         box-shadow: 120px 80px 40px 20px #0ff; 
@@ -187,13 +330,14 @@ footer ul.navbar a{
     }
 
     .search{
-    width:90%;
+    width:89%;
     }
     .fa-search{
         color:white;
     }
 
     header div.profile{
+       display: block;
        width:11%;
        border:cornflowerblue solid 2px;
        box-shadow: 0px 0px 8px ; 
@@ -205,27 +349,34 @@ footer ul.navbar a{
      color:white;
     }
 
-    header ul.navbar a{
-        padding: 5px;
-    }
+    
 
-    header ul.navbar a.firsttab{
+    /* header ul.navbar a.firsttab{
         border:solid  yellow 2px;
         box-shadow: 0px 0px 8px ;    
         border-radius: 3px;   
     }
 
     header ul.navbar a.secondtab{
-        /* border:solid #ff1919 2px; */
+        border:solid #ff1919 2px; 
         border:solid #4895ef 2px;
         box-shadow: 0px 0px 8px ;
         border-radius: 3px;  
-    }
+    } 
 
     header ul.navbar a.thirdtab{
         border:solid #b3ff51 2px;  
         box-shadow: 0px 0px 8px ;
         border-radius: 3px;  
+    } */
+
+    header article div.lines{
+        display:none;
+    }
+
+    header section div.lines{
+        width:70%;
+        display: block;
     }
 
     header section div.line-first
@@ -259,9 +410,6 @@ footer ul.navbar a{
         width: 100%;
     }   
     
-    header section div.lines{
-        width:70%;
-    }
     
     header div.circle-second{
       color:#4895ef;
@@ -280,6 +428,41 @@ footer ul.navbar a{
         justify-content: space-between;
         width:30%;
     }
+
+    .container-barMenu{
+        display: none;
+    }
+
+    main section label.advices{
+        margin-top: 12px;
+    }
+
+    .check{
+        width: 25%;
+        font-size: 1rem;
+    }
+
+    footer nav{
+        display:flex;
+        flex-wrap:wrap;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    footer nav .logo{
+        width:22%;
+        order: 0;
+    }
+
+    footer nav ul{
+        width:35%;
+    }
+
+    footer ul.navbar{
+        display:flex;
+        flex-wrap:wrap;
+        justify-content: space-between;
+    } 
 
     
 }
