Modifying styles of Register and login

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -6,18 +6,30 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    font-size: 13px;
+    font-size: 19px;
     /* background-color:#0E948D33; */
     /* background-color:#26314d69; */
-    background-image: url(/images/background.jpg);
+    /*background-image: url(/images/background.jpg);
     background-size:cover;    
     background-attachment: scroll;
+    background-color: #ffd000;
+    background-image: linear-gradient(132deg, #ffd000 0%, #60ab0c 100%);
+    background: #6A9113; 
+    background: -webkit-linear-gradient(to right, #141517, #6A9113); 
+    background: linear-gradient(to right, #141517, #6A9113);
+    background: #4DA0B0; 
+    background: -webkit-linear-gradient(to right, #D39D38, #4DA0B0);  
+    background: linear-gradient(to right, #D39D38, #4DA0B0); */
+    background: #c2e59c;  
+    background: -webkit-linear-gradient(to right, #64b3f4, #c2e59c); 
+    background: linear-gradient(to right, #64b3f4, #c2e59c); 
 }
 
 h3{
     text-align:left;
     font-size: 17px;
     margin-bottom: 5px;
+    color:black;
 }
 
 .logo{
@@ -34,19 +46,30 @@ header{
     padding:12px;
 }
 
-.header-nav ul{
-    margin:10px 0px;
-    list-style-type: none;
+header article{
+    margin-top:10px;
+    margin-left:5px;
 }
 
+.header-nav{
+    display:block;
+    margin-left:15%;
+}
+
+.header-nav ul{
+    margin:15px 0px;
+    list-style-type: none;
+}
+.header-nav ul li{
+    margin-bottom:10px;
+}
 .header-nav a{
     text-decoration: none;
     color:white;
 }
 
-
-header .button-search{
-   background-color:black;   
+header article div.input-search{
+   display: none; 
 }
 
 header div.lines{
@@ -85,6 +108,15 @@ header article div.line-first
         margin-bottom:0px;
     }
 
+    ul.user-options li button{
+        background-color: #1A0315;
+        font-size: 20px;
+        border-radius: 5px;
+        border:none;
+        padding: 2px;
+        color: #88D317;
+      }
+
 .container-barMenu{
     width: max-content;
     margin: auto;
@@ -104,15 +136,15 @@ header div.profile{
 }
 
 main{
-    padding:8px;
+    padding:5%;
     text-align: center;
 }
 
 main h1{
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     margin-bottom:20px;
     margin-top:15px;
-    color:white;
+    color:black;
 }
 main article.tabs{
     display:flex;
@@ -122,13 +154,25 @@ main article.tabs{
     margin-bottom: 0px;
 }
  main article.tabs div.register{
+    /*background-color: #ffd000;
+    background-image: linear-gradient(132deg, #ffd000 0%, #60ab0c 100%);
     background-color: #0093E9; 
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    /*background-color:#89c2d9;
+    background-color:#89c2d9;
     background-color:#a2d2ff;
     background-color:#6182A4;
     background-color:#4895ef; 
-    opacity:0.8;*/
+    opacity:0.8;
+    background: #cb2d3e; 
+    background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);
+    background: linear-gradient(to right, #ef473a, #cb2d3e);
+    background: #000428; 
+    background: -webkit-linear-gradient(to right, #004e92, #000428); 
+    background: linear-gradient(to right, #004e92, #000428);
+    background: #000000;  
+    background: -webkit-linear-gradient(to right, #434343, #000000); 
+    background: linear-gradient(to right, #434343, #000000); */
+    background-color: white;
     width:45%;
     height: 35px;
     border-top-left-radius: 6px;
@@ -143,16 +187,28 @@ main article.tabs div.register a.register-tab{
     line-height: 34px;
     text-transform: uppercase;
     font-size:0.9rem;
-    color: white;
+    color: black;
 }
 
 main article.tabs div.login{
+    /*background-color: #ffd000;
+    background-image: linear-gradient(132deg, #ffd000 0%, #60ab0c 100%);
     background-color: #0093E9;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    /*background-color:#89c2d9;
+    background-color:#89c2d9;
     background-color:#a2d2ff;
     background-color:#6182A4; 
-    background-color:#4895ef; */
+    background-color:#4895ef; 
+    background: #cb2d3e; 
+    background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);
+    background: linear-gradient(to right, #ef473a, #cb2d3e);
+    background: #000428; 
+    background: -webkit-linear-gradient(to right, #004e92, #000428); 
+    background: linear-gradient(to right, #004e92, #000428);
+    background: #000000;  
+    background: -webkit-linear-gradient(to right, #434343, #000000); 
+    background: linear-gradient(to right, #434343, #000000);*/
+    background-color: white;
     opacity: 0.5;
     width:45%;
     height: 35px;
@@ -164,19 +220,31 @@ main article.tabs div.login a.login-tab{
     text-decoration: none;
     line-height: 34px;
     text-transform: uppercase;
-    font-size:0.9rem;
-    color:white;
+    font-size:0.8rem;
+    color:black;
 }
 
 main section{
     padding:8px;
+    /*background: #cb2d3e; 
+    background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);
+    background: linear-gradient(to right, #ef473a, #cb2d3e);
     background-color: #0093E9;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    /*background-color:#89c2d9;
+    background-color:#89c2d9;
     background-color:#a2d2ff;
     background-color:#6182A4;
     background-color:#4895ef;
-    opacity:0.8;*/
+    background-color: #ffd000;
+    background-image: linear-gradient(132deg, #ffd000 0%, #60ab0c 100%);
+    opacity:0.8;
+    background: #000428; 
+    background: -webkit-linear-gradient(to right, #004e92, #000428); 
+    background: linear-gradient(to right, #004e92, #000428);
+    background: #000000;  
+    background: -webkit-linear-gradient(to right, #434343, #000000); 
+    background: linear-gradient(to right, #434343, #000000);*/
+    background-color: white;
     margin:5px;
     margin-top: -1px;
     margin-bottom: 10px;
@@ -204,15 +272,31 @@ main section article.fullname div{
 .input{
  width: 100%;
  height:5vh;
+ max-height: 40px;
  border-radius: 20px;
- border: none;
+ border:#4895ef 2px solid;
+ box-shadow: 2px 2px 3px rgb(72,149,239,40%);
  background-color: white;
  padding:0px 10px;
+ margin-bottom: 10px;
+ transition: border 0.5s;
+}
+
+.input:hover{
+    border:#88D317 2px solid;
+    box-shadow: 2px 2px 3px rgb(136,211,23,40%);
 }
 
 .check{
-    width: 100%;
-    font-size: 0.6rem;
+    font-size: 10px;
+    color:black;
+    padding:2px;
+    align-items: center;
+    width:100%;
+}
+.checkbox{
+    line-height: 12px;
+     
 }
 
 main section label.advices{
@@ -224,21 +308,26 @@ main section label.advices{
 .register-button{
     color:white;
     border-radius: 5px;
-    width: 45%;
+    width: 100%;
     height: 5vh;
-    margin-right: 70%;
-    background-color: #26314d;
+    background-color: #4895ef;
     border:none;
-    font-size: 10px;
+    font-size: 14px;
     /*background-color:#0077b6;
     background-color:#005f73;
     background-color: #6182A4;
     background-color: #39A988;*/
+    transition: background-color, 400ms;
 }
+
+.register-button:hover{
+    background-color: #88D317;
+}
+
+
 footer{
     background-color:black;
     padding:10px;
-  
     margin-top:0px;
 }
 
@@ -287,11 +376,35 @@ footer ul.navbar{
 .fa-whatsapp{color: white;
     margin:10px;}
 
-@media(min-width: 769px){
-    .logo{
-        width:30%;
+@media(min-width: 560px){
+    .container-barMenu
+    {
+        display:none;
     }
 
+    .header-nav
+    {
+        display:flex !important;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        margin-bottom:0px;
+    }
+
+    .header-nav ul{
+        margin-bottom:0px;
+    }
+    main{
+        padding:5% 8%;
+        
+    }
+}
+
+@media(min-width: 769px){
+    .logo{
+        width:40%;
+    }
+    
     header article{
         display:flex;
         flex-wrap:wrap;
@@ -301,10 +414,10 @@ footer ul.navbar{
     }
     
     .header-nav{
-        width:28%;
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
+        align-items: center;
+        margin-left:0px;
         /* align-items: flex-start; */
         /* margin-bottom:8px;
         margin-left:38%; */
@@ -312,28 +425,47 @@ footer ul.navbar{
 
     .header-nav ul{
         display: flex;
-        flex-direction: row;
-        width: 100%;
         justify-content: space-between;
     }
 
-    .header-nav ul a{
-        padding: 5px;
+    .header-nav ul.tabs{
+        width:60%;
+        margin-left: 10px;
+        margin-left: 10px;
     }
+    .header-nav ul.user-options{
+        width:18%;
+        margin-right: 50px;
+    }
+
 
     /* header ul.navbar li{
         width:30%;
         box-shadow: 120px 80px 40px 20px #0ff; 
     } */
+
+    header article div.input-search{
+        display: block; 
+    }
+
     div.input-search{
-    width:25%;
+    width:45%;
     }
 
     .search{
     width:89%;
+    border:none;
+    border-radius: 20px;
+    height:4vh;
+    padding:10px; 
+    max-height: 40px;
     }
     .fa-search{
-        color:white;
+        color:black;
+        border:none;
+        border-radius: 20px;
+        height:2vh;
+        max-height: 10px;
     }
 
     header div.profile{
@@ -402,15 +534,7 @@ footer ul.navbar{
         width:100%;
         margin-bottom:0px;
     }
-    header section{
-        display: flex;
-        flex-wrap: wrap;
-        align-items: flex-end;
-        justify-content:space-between;
-        width: 100%;
-    }   
-    
-    
+
     header div.circle-second{
       color:#4895ef;
     }
@@ -429,17 +553,12 @@ footer ul.navbar{
         width:30%;
     }
 
-    .container-barMenu{
-        display: none;
-    }
-
-    main section label.advices{
-        margin-top: 12px;
+    .advices{
+        margin-top:10px;
     }
 
     .check{
-        width: 25%;
-        font-size: 1rem;
+        font-size: 14px;
     }
 
     footer nav{
@@ -463,6 +582,11 @@ footer ul.navbar{
         flex-wrap:wrap;
         justify-content: space-between;
     } 
+}
 
-    
+
+@media(min-width: 1000px){
+main{
+    padding:8% 20%;
+}
 }
